fixed: broken input field in fluent card

--- a/assets/scss/integrations/btl-fbs.scss
+++ b/assets/scss/integrations/btl-fbs.scss
@@ -53,6 +53,10 @@
 					border: 1px solid rgb(235, 235, 235);
 					border-radius: 6px;
 
+					> div {
+						display: flex;
+					}
+
 					span {
 						&.btl-site-url {
 							max-width: 50%;
